--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,12 @@ anyhow = "1.0.95"
 clap = { version = "4.5.23", features = ["derive"] }
 dashmap = "6.1.0"
 inkwell = { version = "0.5.0", features = ["llvm14-0"] }
-inkwell_internals = "0.10.0"
 pest = "2.7.15"
 pest_derive = "2.7.15"
-rustyline = "15.0.0"
-spinners = "4.1.1"
-termion = "3.0.0"
+rustyline = { version = "15.0.0", optional = true }
+spinners = { version = "4.1.1", optional = true }
+termion = { version = "3.0.0", optional = true }
+
+[features]
+interactive = [ "dep:spinners" ]
+repl = [ "dep:rustyline", "dep:termion" ]
