--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.95"
 clap = { version = "4.5.23", features = ["derive"] }
-dashmap = "6.1.0"
 farnese-core = { path = "./farnese-core" }
 farnese-lexer = { path = "./farnese-lexer" }
+farnese-repl = { path = "./farnese-repl", optional = true }
 inkwell = { version = "0.6.0", features = ["llvm14-0"] }
-rustyline = { version = "15.0.0", optional = true }
-spinners = { version = "4.1.1", optional = true }
-termion = { version = "3.0.0", optional = true }
 
 [features]
-interactive = [ "dep:spinners" ]
-repl = [ "dep:rustyline", "dep:termion" ]
+repl = [ "dep:farnese-repl" ]
 
 [workspace]
-members = [".", "farnese-core", "farnese-lexer"]
+members = [".", "farnese-core", "farnese-lexer", "farnese-repl"]
